cluster/manifests/miniflux/miniflux-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: miniflux
  name: miniflux
  namespace: miniflux
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: miniflux
