cluster/manifests/miniflux/miniflux-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux
  namespace: miniflux
spec:
  entryPoints:
  - privateweb
  - privatesecure
  - wgweb
  - wgsecure
  routes:
  - kind: Rule
    match: Host(`miniflux.lan.ftzmlab.xyz`)
    services:
    - name: miniflux
      port: 8080
  tls: {}
